# open-ptc-agent

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  sync-upstream.sh
docs/: CONFIGURATION.md
docs/zh/: CONFIGURATION.md  README.md
example/: PTC_Agent.ipynb  Subagent_demo.ipynb  quickstart.py  utils.py
example/tests/: test_export_sandbox.py
libs/ptc-agent/: README.md  pyproject.toml
libs/ptc-agent/ptc_agent/: __init__.py
libs/ptc-agent/ptc_agent/agent/: __init__.py  agent.py  graph.py
libs/ptc-agent/ptc_agent/agent/backends/: __init__.py  local.py
libs/ptc-agent/ptc_agent/agent/middleware/: deepagent_middleware.py
libs/ptc-agent/ptc_agent/agent/prompts/: formatter.py
libs/ptc-agent/ptc_agent/agent/prompts/templates/components/: workspace_paths.md.j2
libs/ptc-agent/ptc_agent/agent/tools/: bash.py  code_execution.py  glob.py
libs/ptc-agent/ptc_agent/config/: __init__.py  agent.py  core.py  loaders.py  utils.py
libs/ptc-agent/ptc_agent/core/: __init__.py  mcp_registry.py  sandbox.py  tool_generator.py
libs/ptc-agent/tests/: conftest.py
libs/ptc-agent/tests/integration_tests/: test_execute_code_storage.py  test_grep_glob_sandbox.py  test_mcp_tool_transformation.py
libs/ptc-agent/tests/unit_tests/: test_bash_tool.py  test_local_backend.py  test_sandbox.py  test_skills_sync.py
libs/ptc-cli/: pyproject.toml
libs/ptc-cli/ptc_cli/: main.py
libs/ptc-cli/ptc_cli/agent/: persistence.py
libs/ptc-cli/ptc_cli/commands/: slash.py
libs/ptc-cli/ptc_cli/core/: config.py
libs/ptc-cli/ptc_cli/sandbox/: health.py
libs/ptc-cli/ptc_cli/streaming/: executor.py
libs/ptc-cli/tests/: conftest.py
libs/ptc-cli/tests/integration_tests/: test_agent_lifecycle_mock.py  test_cli_features_mock.py  test_cli_workflow_mock.py  test_session_persistence_real.py
libs/ptc-cli/tests/unit_tests/: test_agent_persistence.py  test_commands_slash.py  test_core_config.py  test_sandbox_health.py
