[project]
name = "open-ptc-agent"
version = "0.1.0"
description = "Open PTC Agent Monorepo - Programmatic Tool Calling with MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]
