[project]
name = "open-ptc-agent"
version = "0.1.0"
description = "Open PTC Agent Monorepo - Programmatic Tool Calling with MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

# Build system - use hatchling to avoid setuptools flat-layout issues
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# No packages at root level - this is a workspace for subdirectory packages
# Install using: git+https://github.com/malbari/open-ptc-agent.git#subdirectory=libs/ptc-agent

[tool.hatch.build.targets.wheel]
packages = []

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]
